--- a/Network_chat/network_chat.ui
+++ b/Network_chat/network_chat.ui
@@ -14,7 +14,7 @@
    <string>Network_chat</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -66,19 +66,6 @@
        </item>
       </layout>
      </item>
-     <item row="0" column="1">
-      <widget class="QCheckBox" name="checkBox">
-       <property name="text">
-        <string>local peer discovery</string>
-       </property>
-       <property name="checked">
-        <bool>true</bool>
-       </property>
-       <property name="tristate">
-        <bool>false</bool>
-       </property>
-      </widget>
-     </item>
      <item row="1" column="1">
       <widget class="QLabel" name="label_3">
        <property name="text">
@@ -112,19 +99,21 @@
        </property>
       </widget>
      </item>
+     <item row="0" column="1">
+      <widget class="QCheckBox" name="checkBox">
+       <property name="text">
+        <string>local peer discovery</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
+       <property name="tristate">
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
     </layout>
    </widget>
-   <zorder>lineEditMessage</zorder>
-   <zorder>pushButtonSend</zorder>
-   <zorder>lineEditMessage</zorder>
-   <zorder>verticalLayoutWidget</zorder>
-   <zorder>checkBox</zorder>
-   <zorder>textBrowserPeers</zorder>
-   <zorder>textBrowserPeers</zorder>
-   <zorder>horizontalLayoutWidget</zorder>
-   <zorder>checkBox</zorder>
-   <zorder>label_2</zorder>
-   <zorder>label_3</zorder>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
